--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     section {
       margin-bottom: 2rem;
     }
+    .centered-frame {
+	  display: flex;
+	  justify-content: center;
+	  margin: 1rem 0;
+	}	
     h2 {
       color: #61dafb;
       margin-bottom: 1rem;
@@ -42,6 +47,7 @@
       padding-bottom: 0.2rem;
     }
     ul.projects {
+    margin: auto;
       list-style: none;
       padding-left: 0;
     }
@@ -87,39 +93,57 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Fkjaha (Andrii Taras)</h1>
     <p>Indie Game Developer — PC & Mobile Games</p>
   </header>
 
   <section>
-    <h2>Current Project <span class="status">(In Development)</span></h2>
+    <h2>Active Projects <span class="status">(In Development)</span></h2>
     <ul class="projects">
       <li>
-        <a href="https://link-to-current-project.com" class="project-link" target="_blank" rel="noopener noreferrer">
-          Project Name
-        </a>
-        <p>Short description of your current project. What makes it unique or exciting?</p>
+	      <div class="centered-frame">
+	         <iframe src="https://store.steampowered.com/widget/3686460/" frameborder="0" width="646" height="190"></iframe>
+	      </div>
       </li>
     </ul>
   </section>
 
   <section>
-    <h2>Completed Games</h2>
+    <h2>PC Games</h2>
     <ul class="projects">
       <li>
-        <a href="https://link-to-game1.com" class="project-link" target="_blank" rel="noopener noreferrer">Game Title 1</a>
-        <p>Brief description of this game, genre, platforms, or other details.</p>
+	      <div class="centered-frame">
+	         <iframe src="https://store.steampowered.com/widget/2838490/" frameborder="0" width="646" height="190"></iframe>
+	      </div>
+	      <p>2024-2025</p>
+      </li>
+
+      <li>
+	      <div class="centered-frame">
+	         <iframe src="https://store.steampowered.com/widget/2338500/" frameborder="0" width="646" height="190"></iframe>
+	      </div>
+	      <p>2023-2024</p>
       </li>
       <li>
-        <a href="https://link-to-game2.com" class="project-link" target="_blank" rel="noopener noreferrer">Game Title 2</a>
-        <p>Brief description of this game, genre, platforms, or other details.</p>
+	      <div class="centered-frame">
+	         <iframe src="https://store.steampowered.com/widget/2181100/" frameborder="0" width="646" height="190"></iframe>
+	      </div>
+	      <p>2023-2024</p>
       </li>
+      <li>
+      
+	      <div class="centered-frame">
+	         <iframe src="https://store.steampowered.com/widget/1631170/" frameborder="0" width="646" height="190"></iframe>
+	      </div>
+	      <p>2021-2022</p>
+      </li>
+
       <!-- Add more games here -->
     </ul>
   </section>
 
   <footer>
-    <p>© 2025 Your Name — Built with GitHub Pages</p>
+    <p>© 2025 Fkjaha (Andrii Taras)</p>
   </footer>
 </body>
 </html>
