--- a/index.html
+++ b/index.html
@@ -13,17 +13,28 @@
     }
 
     header {
+
       text-align: center;
       padding: 2rem 1rem;
       background: linear-gradient(135deg, #1f1f1f, #2c2c2c);
     }
 
     h1 {
+		  text-shadow: 
+	  3px 3px 3px rgba(0, 0, 0, 1),
+	  -3px -3px 3px rgba(0, 0, 0, 1),
+	  3px -3px 3px rgba(0, 0, 0, 1),
+	  -3px 3px 3px rgba(0, 0, 0, 1);
       margin-bottom: 0.5rem;
       font-size: 2.8rem;
     }
 
     .intro {
+		  text-shadow: 
+	  3px 3px 3px rgba(0, 0, 0, 1),
+	  -3px -3px 3px rgba(0, 0, 0, 1),
+	  3px -3px 3px rgba(0, 0, 0, 1),
+	  -3px 3px 3px rgba(0, 0, 0, 1);
       max-width: 800px;
       margin: 0 auto 1.5rem;
       font-size: 1.1rem;
@@ -39,7 +50,7 @@
 
     .profile-links a {
       color: #fff;
-      background: #444;
+      background: #111;
       padding: 0.5rem 1rem;
       border-radius: 20px;
       text-decoration: none;
@@ -47,7 +58,7 @@
     }
 
     .profile-links a:hover {
-      background: #666;
+      background: #555;
     }
 
     .section {
@@ -58,16 +69,17 @@
       font-size: 2rem;
       text-align: left;
       margin-bottom: 0.5rem;
-      background: linear-gradient(90deg, #ff8c00, #ffa500);
+      /*background: linear-gradient(90deg, #ff8c00, #ffa500);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      -webkit-text-fill-color: transparent;*/
     }
 
     .divider {
 	  width: 100%;
       /*width: 100px;*/
       height: 4px;
-      background: linear-gradient(to right, #ff8c00, #ffa500);
+      /*background: linear-gradient(to right, #ff8c00, #ffa500);*/
+	  background: white;
       margin: 1.5rem 0 1.5rem ;
       border-radius: 2px;
     }
@@ -82,16 +94,34 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(4, 1fr);
       gap: 1.5rem;
     }
+		@media (max-width: 800px) {
+			.grid {
+		grid-template-columns: repeat(3, 1fr); /* minimum of 2 columns */
+	  }
+	}
+
+	@media (max-width: 500px) {
+	  .grid {
+		grid-template-columns: 2fr; /* fallback to 1 column on very small screens */
+	  }
+	}	
+	/*
+	@media (min-width: 1000px) {
+	  .grid {
+		grid-template-columns: repeat(3, 1fr);
+	  }
+	}
+	*/
 
     .game {
       position: relative;
       /*border-radius: 16px;*/
-      overflow: hidden;
+      /*overflow: hidden;*/
       /*height: 353px;*/
-	  width: 100%;
+	  max-width: 100%;
 	  padding-top: 57.3%;
     }
 
@@ -105,7 +135,7 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      filter: blur(1px) brightness(0.8);
+      filter: blur(1px) brightness(0.5);
 	  transform: scale(1);
       transition: filter 0.4s ease, transform 0.4s ease;
       z-index: 0;
@@ -132,6 +162,7 @@
     }
 
     .game-title {
+	  text-shadow: 2px 2px 2px rgba(0, 0, 0, 1), -2px -2px 2px rgba(0, 0, 0, 1), 2px -2px 2px rgba(0, 0, 0, 1), -2px 2px 2px rgba(0, 0, 0, 1);
       font-size: 1.2rem;
       font-weight: bold;
       margin-bottom: 0.25rem;
@@ -162,7 +193,7 @@
 	  let game = `
 	  <div class="game" style="background-image: url(${project.image}">
 		<div class="overlay">
-		  <div class="game-title">${project.title}</div>
+		  <div class="game-title" >${project.title}</div>
 		  <div class="buttons">
 			${project.links.map(link => `<a href="${link.url}" target="_blank">${link.name}</a>`).join('')}
 		  </div>
@@ -178,28 +209,38 @@
 	  title: "Flashing Dark",
 	  image: "https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/2838490/capsule_616x353.jpg?t=1746367778);",
 	  links: [
-		{ name: "Steam", url: "#" },
+		{ name: "Steam", url: "https://store.steampowered.com/app/2838490/Flashing_Dark/" },
 	  ]
 	},
 	{
 	  title: "Utter Takedown",
 	  image: "https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/2338500/capsule_616x353.jpg?t=1746367739)",
 	  links: [
-		{ name: "Steam", url: "#" },
+		{ name: "Steam", url: "https://store.steampowered.com/app/2338500/Utter_Takedown/" },
 	  ]
 	},
 	{
 	  title: "Nevermind This",
 	  image: "https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/2181100/capsule_616x353.jpg?t=1746367686)",
 	  links: [
-		{ name: "Steam", url: "#" },
+		{ name: "Steam", url: "https://store.steampowered.com/app/2181100/Nevermind_This/" },
 	  ]
 	},
 	{
 	  title: "Objective H.A.S.T.E.",
 	  image: "https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1631170/capsule_616x353.jpg?t=1746367957)",
 	  links: [
-		{ name: "Steam", url: "#" },
+		{ name: "Steam", url: "https://store.steampowered.com/app/1631170/Objective_HASTE__Survival_Horror_Escape/" },
+	  ]
+	}
+	];
+	
+	const projectsUnreleased = [
+	{
+	  title: "Cell Servant",
+	  image: "https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/3686460/123a81c3f212382c99235f05fb83f33fbe8a0d79/capsule_616x353.jpg?t=1746756738",
+	  links: [
+		{ name: "Steam", url: "https://store.steampowered.com/app/3686460/Cell_Servant/?curator_clanid=4777282" },
 	  ]
 	}
 	];
@@ -207,20 +248,40 @@
   </script>
 </head>
 <body>
-  <header style="background-color: rgba(0.5, 0.5, 0.5, 1); background-size: cover; background-image: url(https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/3686460/2f1d8d90c05a6b3c6c277d0e03d529bf04957acf/library_hero_2x.jpg?t=1746756738);">
+  <header style="background-color: rgba(0, 0, 0, 0.5); background-size: cover; background-image: url(https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/3686460/2f1d8d90c05a6b3c6c277d0e03d529bf04957acf/library_hero_2x.jpg?t=1746756738);">
     <h1>Fkjaha (Andrii Taras)</h1>
-    <p class="intro">I'm an indie game developer making PC/Mobile games. Here you can find my published and in-progress projects. Follow me on these platforms or get in touch!</p>
+    <p class="intro" >I'm an indie game developer making PC/Mobile games. Here you can find my published and in-progress projects. Follow me on these platforms or get in touch!</p>
     <div class="profile-links">
-      <a href="#">Steam</a>
-      <a href="#">itch.io</a>
-      <a href="#">GOG</a>
-      <a href="#">Twitter</a>
-      <a href="#">Email</a>
+      <a href="https://store.steampowered.com/curator/43783746">Steam</a>
+      <a href="https://fkjaha.itch.io">itch.io</a>
+      <a href="https://bsky.app/profile/fkjaha.bsky.social">Blue Sky</a>
+      <a href="#">fkjahadev@gmail.com</a>
     </div>
   </header>
 
+
   <div class="section">
-    <h2>Published Games</h2>
+    <h2>Next</h2>
+    <div class="divider"></div>
+	
+    <div class="grid-wrapper">
+      <div class="grid" style="grid-template-columns: repeat(3, 1fr);">
+        
+		<script>
+		
+			projectsUnreleased.forEach(project => {
+			  document.write(createGameElement(project));
+			});
+			
+		</script>
+		
+      </div>
+    </div>
+  </div>
+
+
+  <div class="section">
+    <h2>Play Released Games</h2>
     <div class="divider"></div>
 	
     <div class="grid-wrapper">
@@ -238,22 +299,6 @@
     </div>
   </div>
 
-  <div class="section">
-    <h2>In-Progress Games</h2>
-    <div class="divider"></div>
-    <div class="grid-wrapper">
-      <div class="grid">
-        <div class="game" style="background-image: url('game2-poster.jpg');">
-          <div class="overlay">
-            <div class="game-title">Upcoming Game</div>
-            <div class="buttons">
-              <a href="#">Steam</a>
-              <a href="#">itch.io</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  
 </body>
 </html>
