--- a/index.html
+++ b/index.html
@@ -69,27 +69,29 @@
       font-size: 2rem;
       text-align: left;
       margin-bottom: 0.5rem;
+      margin-left: 12.5%;
       /*background: linear-gradient(90deg, #ff8c00, #ffa500);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;*/
     }
 
     .divider {
-	  width: 100%;
+      margin: 0 auto 1.5rem;
+	  width: 75%;
       /*width: 100px;*/
       height: 4px;
       /*background: linear-gradient(to right, #ff8c00, #ffa500);*/
-	  background: white;
-      margin: 1.5rem 0 1.5rem ;
+	 background: white;
+      /*margin: 1.5rem  ;*/
       border-radius: 2px;
     }
 
     .grid-wrapper {
-      /*max-width: 1200px;*/
+      max-width: 75%;
       margin: 0 auto;
       background: #1a1a1a;
       padding: 1.5rem;
-      border-radius: 20px;
+      /*border-radius: 5px;*/
     }
 
     .grid {
