--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fkjaha Dev</title>
+  <link rel="icon" type="image/png" href="https://yt3.googleusercontent.com/ytc/AIdro_mmGv72A8cWtKlKcP1cpqlH56j5a9amsbI1IJMh0xa7Dw=s160-c-k-c0x00ffffff-no-rj">
   <style>
     body {
       margin: 0;
