--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	  let game = `
 	  <article class="game-card" data-game>
           <div class="game-media">
-            <img class="card-cover" src="https://images.unsplash.com/photo-1618172193763-39f6218a7b25?q=80&w=1600&auto=format&fit=crop" alt="Project Nebula key art">
+            <img class="card-cover" src=${project.image} alt="Project Nebula key art">
             <video class="card-video" muted playsinline loop preload="metadata">
               <source src=${project.videoPath} type="video/mp4">
             </video>
